FIX: scrollbar appeared when remove reaction
On mobile, when remove reaction float down then the scrollbar appear. overflow-y: hidden will fix this.

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -25,3 +25,7 @@
     margin-left: unset !important;
   }
 }
+
+.discourse-reactions-reaction-button {
+  overflow-y: hidden;
+}
